# watering

./: .gitignore  README.md  common_data_import.cmake
app/: Caddyfile  Dockerfile  docker-compose.yml  generate_certs.sh  main.py  redis.conf  requirements.txt
app/api/: dependencies.py
app/api/routers/: auth.py  devices.py  groups.py  settings.py  telemetry.py
app/core/: config.py  database.py  logger.py  redis.py  security.py
app/database/: 001-init.sql
app/schemas/: device.py  group.py  telemetry.py  user.py
app/services/: command_service.py  telemetry_service.py  user_service.py
common/: helpers.c  helpers.h  proto.h
front/: Dockerfile  index.html  package-lock.json  package.json
front/src/app/: routes.ts
front/src/app/components/: ProtectedRoute.tsx
front/src/app/components/ui/: dialog.tsx
front/src/app/context/: AuthContext.tsx
front/src/app/pages/: AddDevice.tsx  DeviceAnalytics.tsx  DeviceList.tsx  DeviceSettings.tsx  Login.tsx  NotFound.tsx  Register.tsx  Root.tsx  Settings.tsx
pico-client/: CMakeLists.txt  Makefile  README.md  build.sh  rpiflash.sh
pico-client/bootloader/: CMakeLists.txt  bootloader.ld  crc.c  main.c  slot.h  syscalls.c
pico-client/common/: bootloader.ld  crc.c  crc.h  lwipopts.h  reset.h  shared_mem.c  shared_mem.h
pico-client/displayer/: CMakeLists.txt  comm_task.c  disp_task.c  main.c  sched.c  sched.h  ssd1680.c  ssd1680.h  tcp_server.c  tcp_server.h  text_renderer.c  text_renderer.h  wd_task.c
pico-client/tools/: combine.sh
pico-client/waterer/: CMakeLists.txt  README.md  disp_task.c  dispatcher.c  dispatcher.h  font.h  gpio_irq.c  main.c  pins.h  sched.c  sched.h  ssd1306.c  tcp_client.c  tcp_client.h  uart_task.c  waterer.c  waterer.h  waterer.ld.in  waterer_task.c
serv/: CMakeLists.txt  Makefile  build.sh  cloud.c  cloud.h  controller.c  controller.h  creators.c  creators.h  ctx_save.c  dispatcher.c  dispatcher.h  main.c  recver.c  recver.h  serv.c  serv.c.old  serv.h
tools/: gen_test_file.py
